67 Text With CTA  https://stwebsite-prod-272980-cd.azurewebsites.net/port-users/FAQ FAQ button going out of the box in I pad Portrait View fixed

--- a/scss/_career-benefits.scss
+++ b/scss/_career-benefits.scss
@@ -24,7 +24,8 @@
         border: 0;
 
         img {
-            border: 1px solid $lightGrey;
+            // border: 1px solid $lightGrey;
+       
         }
 
         .caption {
